--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ nav div.botoes button{
     background-color: #0A99FE10;
     border: transparent;
     border-radius: 8px;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Inter', sans-serif;
     font-size: 20px;
     font-weight: 400;
     margin-left: 20px;
@@ -90,7 +90,7 @@ main section.secaoDiv{
 
 .titulo {
     color: 	#1B1B1B;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Inter', sans-serif;
     font-size: 20px;
     font-weight: 400;
     margin-bottom: 20px;
@@ -110,7 +110,7 @@ ul li.produto {
     margin-right: 25px;
     justify-content: space-between;
     align-items: center;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Inter', sans-serif;
     text-align: center;
     border: 2px transparent solid;
     transition: 0.3s ease;
